--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     I have experience with HTML, CSS, JavaScript , and more and I am always eager to learn new technologies and frameworks. My goal is to become a professional developer and work on challenging and rewarding projects.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1ZneZkNQjEIF1D_Bl_eoV7VaHodZSuTZ4/view?usp=drive_link" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1EYeIHVAy_yLFw95DDOIa5-szgwRX-ULd/view?usp=sharing" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -57,7 +57,7 @@
                           My aim is to create a positive impact through my work.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1EYeIHVAy_yLFw95DDOIa5-szgwRX-ULd/view?usp=sharing" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -389,7 +389,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="" class="main-btn">
+                                <a href="https://drive.google.com/file/d/1EYeIHVAy_yLFw95DDOIa5-szgwRX-ULd/view?usp=sharing" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
